# ASCender

./: .gitignore  README.md  index.md  학위논문양식(한글)_우원.hwp
basic-transformer/: pyproject.toml
basic-transformer/configs/: ascender.yaml  ascender_test.yaml  test_m3.yaml
basic-transformer/src/: train.py
basic-transformer/src/models/: multiplicative_transformer.py  transformer.py
code/basic-transformer/configs/: base.yaml
code/basic-transformer/src/data/iwslt14_csv/: test.csv  validation.csv
code/basic-transformer/src/models/: ascender_bias.py
final/: background.md  introduction.md
hwp/: 학위논문양식(영문)_우원.hwp  학위논문양식(한글)_우원.hwp
infomation/: reason.md  saliance.md
method/: print_ASCender_method.md
post/: linear_non-linear.md  p-np.md
practice-work/: 0_ASCender_Concept.md  0_ASCender_Flow.md  0_ASCender_Meaning.md  1_ASCender_Abstract.md  2_ASCender_Introduction.md  3_ASCender_Related_Work.md  4_ASCender_Method.md  5_ASCender_PyTorch.md  6_ASCender_Results.md  7_ASCender_Discussion.md  8_ASCender_Camera_Ready.md  9_ASCender_Feedback.md  ASCender_EN.md  ASCender_KO.md  ASCender_Simple.md
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars  userdata_cpu.sh  userdata_gpu.sh
